[package]
name = "notblib"
version = "0.1.0"
description = "Lib for NotBalds projects"
authors = ["icelayer"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.78"

[dependencies]
base64 = "0.21.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
uuid = { version = "1.10.0", features = ["v4", "js"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
rand = "0.8.5"
colored = "2.1.0"
rpassword = "7.3"
directories = "5.0.1"
url = "2.5.4"
toml = "0.8.19"
rsa = { version = "0.9.7", features = ["sha2"] }
thiserror = "2.0.9"
embedded-websocket = "0.9.4"
