[package]
name = "notblib"
version = "0.2.1"
description = "Lib for NotBalds projects"
authors = ["icelayer"]
license = "GPL-3.0+"
repository = "https://github.com/NotBalds/notblib-rs"
edition = "2021"
rust-version = "1.68"

[dependencies]
base64 = "0.21.0"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
uuid = { version = "1.10.0", features = ["v4", "js"] }
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
rand = "0.8.5"
colored = "2.1.0"
rpassword = "7.3"
directories = "5.0.1"
url = "2.5.4"
toml = "0.8.19"
rsa = { version = "0.9.7", features = ["sha2"] }
thiserror = "2.0.9"
tungstenite = "0.26.1"
aes-gcm-siv = "0.11.1"
randomizer = "0.1.2"
ecies = { version = "0.2", default-features = false, features = ["pure"] }
